Fixed alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -76,10 +76,8 @@
     .body .items {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
-} 
-.items li {
-    list-style-type: none;
 }
+
 .itemCard {
     position: relative;
     padding: 5px;
@@ -96,9 +94,9 @@
     border-radius: 5%;
 }
 .itemImage:hover {
-    scale: 110%;
+    scale: 120%;
     transition: all;
-    transition-duration: 500ms;
+    transition-duration: 1s;
 }
 .imageSlider {
     position: relative;
